# menu_visualiser

./: .gitignore  .pre-commit-config.yaml  README.md  init_structure.py  main.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: ci-cd.yml
src/: __init__.py
src/app/: __init__.py  image_gen.py  main.py  pipeline.py
src/app/ocr/: __init__.py  group_with_gpt.py  ocr.py  ocr_pipeline.py
src/frontend/: __init__.py
src/menu_visualiser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_ocr.py
