[project]
name = "menu-visualiser"
version = "0.1.0"
description = "A computer vision app that reads a menu and generates images of meals"
authors = [{ name = "Kosi", email = "kossyfab@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi",
    "uvicorn",
    "easyocr",
    "pillow",
    "azure-ai-ml",
    "python-multipart",
    "python-dotenv",
    "azure-ai-documentintelligence",
    "openai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
    "pre-commit"
]


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
